modify appveyor settings

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,7 +64,7 @@ artifacts:
 
 on_success:
 # https://cygwin.com/cygwin-ug-net/cygpath.html
-    - which git | cygpath -w -f -
+#    - which git | cygpath -w -f -
       #- which hugo | cygpath -w -f -
     # bash -c "cp `which git | cygpath -w -f - | cygpath -u -f -` ."
     #    - git config --global credential.helper store
@@ -74,7 +74,7 @@ on_success:
 #    - ps: cat "$env:USERPROFILE\.git-credentials"
 #    - echo ------------
 #    - ls -al ~/
-    - cygpath -w /home
+#    - cygpath -w /home
 #    - cat ~/.git-credentials
 #    - cp 
 #    - echo "%GIT_USER_EMAIL%"
