--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,8 @@ install:
 build_script:
   - echo %path%
   - ls -al .
-  - bash -x aria_build.sh
+    #- bash -x aria_build.sh
+  - bash -x texlive.sh
 artifacts:
   - path: $APPVEYOR_JOB_ID
     #- path: src-
