--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,8 @@ install:
   - mkdir $APPVEYOR_JOB_ID
   - sudo apt-get update
   - sudo apt-get install -y autoconf automake autopoint autotools-dev libtool libxml2-dev libcppunit-dev
-  - wget https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip
-  - unzip -q android-ndk-r20-linux-x86_64.zip
+    #  - wget https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip
+    #  - unzip -q android-ndk-r20-linux-x86_64.zip
   - export ANDROID_NDK_HOME=`pwd`/android-ndk-r20
   - export PATH=$ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin:$PATH
   - export SILENT=true
