--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,8 +38,7 @@ init:
 install:
   - pwd
   - mkdir $APPVEYOR_JOB_ID
-  - sudo apt-get update
-  - sudo apt-get install -y autoconf automake autopoint autotools-dev libtool libxml2-dev libcppunit-dev
+  - bash -x appveyor_prepare.sh
     #  - wget https://dl.google.com/android/repository/android-ndk-r20-linux-x86_64.zip
     #  - unzip -q android-ndk-r20-linux-x86_64.zip
   - set >$APPVEYOR_JOB_ID/env.txt
