add termux unstable packages6

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -72,7 +72,7 @@ build_script:
   - ls -al .
     #- bash -x aria_build.sh
     #- bash -x texlive.sh
-  - bash -x htmltomd.sh
+    #- bash -x htmltomd.sh
 artifacts:
   - path: $APPVEYOR_JOB_ID
     #- path: src-
