--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,6 +74,7 @@ build_script:
     #- bash -x texlive.sh
     #- bash -x htmltomd.sh
  # - bash -x termux-unstable.sh
+  - bash -x bin/geckodriver/curl_gecko.sh
 artifacts:
   - path: $APPVEYOR_JOB_ID
     #- path: src-
