--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ environment:
  #     MSYSTEM: MINGW32
 # Set path for msys
 init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   - pwd
   - ls -al .
   - export MANPATH=/usr/local/texlive/2019/texmf-dist/doc/man:$MANPATH
@@ -124,3 +125,5 @@ on_success:
 #    - echo %TARGET_BRANCH%
 #   - git push -u origin %TARGET_BRANCH%
     - appveyor AddMessage "Static Site Updated"
+  on_finish:
+    - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
