--- a/appveyor.yml
+++ b/appveyor.yml
@@ -72,11 +72,11 @@ build_script:
   - echo $PATH
   - ls -al .
     #- bash -x aria_build.sh
-    #- bash -x texlive.sh
+  - bash -x texlive.sh
     #- bash -x htmltomd.sh
  # - bash -x termux-unstable.sh
   #- bash -x bin/geckodriver/curl_gecko.sh
-  - bash -x fenix_build.sh
+  #- bash -x fenix_build.sh
 artifacts:
   - path: $APPVEYOR_JOB_ID
     #- path: src-
