--- a/appveyor.yml
+++ b/appveyor.yml
@@ -127,5 +127,5 @@ on_success:
 #   - git push -u origin %TARGET_BRANCH%
     - appveyor AddMessage "Static Site Updated"
 on_finish:
-   # - sh: export APPVEYOR_SSH_BLOCK=true
+    - sh: export APPVEYOR_SSH_BLOCK=true
    # - sh: curl -sflL 'https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-ssh.sh' | bash -e -
