--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ init:
   - sh: curl -sflL 'https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-ssh.sh' | bash -e -
   - pwd
   - ls -al .
-  - exprot NVM_BINN=/home/appveyor/.nvm/versions/node/v14.3.0/bin
+  - export NVM_BINN=/home/appveyor/.nvm/versions/node/v14.3.0/bin
   - export MANPATH=/usr/local/texlive/2020/texmf-dist/doc/man:$MANPATH
   - export INFOPATH=/usr/local/texlive/2020/texmf-dist/doc/info:$INFOPATH
   - export PATH=$NVM_BINN:/usr/local/texlive/2020/bin/x86_64-linux:$PATH
