--- a/appveyor.yml
+++ b/appveyor.yml
@@ -83,7 +83,8 @@ build_script:
   - echo $PATH
   - ls -al .
     #- bash -x aria_build.sh
-  - bash -x texlive.sh
+ # - bash -x texlive.sh
+  - bash -x tensorflow_arm64.sh
     #- bash -x htmltomd.sh
  # - bash -x termux-unstable.sh
   #- bash -x bin/geckodriver/curl_gecko.sh
