--- a/appveyor.yml
+++ b/appveyor.yml
@@ -84,8 +84,9 @@ build_script:
   - ls -al .
     #- bash -x aria_build.sh
  # - bash -x texlive.sh
-  - bash -x tensorflow_arm64.sh
+  #- bash -x tensorflow_arm64.sh
     #- bash -x htmltomd.sh
+  - bash -x grub2FM.sh 
  # - bash -x termux-unstable.sh
   #- bash -x bin/geckodriver/curl_gecko.sh
   #- bash -x fenix_build.sh
