--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  tensorflow_arm64 build:
+  tensorflow-arm64_build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
